# ai_scratchpad

./: .gitignore  README.md  requirements.txt
front_end/: gradio_search.py  requirements.txt  streamlit_search.py
langchain/: requirements.txt
langchain-apps/: langchain_search.py  langchain_serper.py  main.py  pyproject.toml
openai/: README.md  hello_world.py  requirements.txt  tutor_agent.py  weather_tool.py
